--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/jsoup-1.10.2.jar"/>
-	<classpathentry kind="lib" path="lib/sqljdbc42.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="lib/jsoup-1.10.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/sqljdbc42.jar" sourcepath="C:/Users/Sama Ihab/Documents/GitHub/AP_project/lib/sqljdbc42.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
