--- a/.classpath
+++ b/.classpath
@@ -8,8 +8,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="E:/Gam3a/Senior 1/Spring2017/Advanced Programming Techniques/Project/AP_project-master/lib/jsoup-1.10.2.jar"/>
-	<classpathentry kind="lib" path="E:/Gam3a/Senior 1/Spring2017/Advanced Programming Techniques/Project/AP_project-master/lib/sqljdbc42.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Waleed Mousa/Documents/GitHub/AP_project/lib/jsoup-1.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Waleed Mousa/Documents/GitHub/AP_project/lib/sqljdbc42.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
